--- a/css/vizstudio_prez.css
+++ b/css/vizstudio_prez.css
@@ -3,7 +3,7 @@
 
 /* Zone definitions, etc. */
 
-#vizstudio {
+.vizstudio {
   width: 100%;
   height: 1080px;
   margin: 0 auto;
@@ -11,6 +11,10 @@
   overflow: hidden;
   display: block;
   position: relative;
+}
+
+#vizprez {
+  background:  url('../media/images/default.png');
 }
 
 .zone-wrapper {
@@ -22,6 +26,12 @@
   top:  0;
   left:  0;
   background:  black;
+}
+
+.zone .zone-default {
+  background:  url('../media/images/default_span2.png');
+  height:  1080px;
+  width:  100%;
 }
 
 /* Additional styles used for media players, images, and wrapper elements */
