--- a/css/visualization_gallery.css
+++ b/css/visualization_gallery.css
@@ -18,8 +18,8 @@ body {
   font-family: sans-serif;
 }
 
-.vizstudio,
-main.vizstudio {
+.visualization-gallery,
+main.visualization-gallery {
   width: 100%;
   height: 1080px;
   margin: 0 auto;
